iris_ws/log/build_2023-12-30_23-04-34/iris_vision/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/iris/iris/iris_ws/install/iris_vision/lib/python3.10/site-packages/iris_vision/image_sub.py", line 28
    except CvBridgeError, e:
           ^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized

